--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,12 @@
         "import/prefer-default-export": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
-        "react/jsx-props-no-spreading": "off"
+        "react/jsx-props-no-spreading": "off",
+        "react/require-default-props": [
+      "error",
+      {
+        "functions": "defaultArguments"
+      }
+    ]
     }
 }
